<?xml version="1.0"?>
<package format="2">
    <!-- Package Information -->
    <name>ov_eval</name>
    <version>1.0.0</version>
    <description>Evaluation methods and scripts for visual-inertial odometry systems.</description>

    <!-- Code Authors -->
    <author email="pgeneva@udel.edu">Patrick Geneva</author>
    <author email="keck@udel.edu">Kevin Eckenhoff</author>
    <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
    <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <depend>eigen</depend>
    <depend>boost</depend>

<!--     <test_depend>cmake_code_coverage</test_depend> -->
    <test_depend>gtest</test_depend>

</package>