<?xml version="1.0"?>
<package format="2">
    <!-- Package Information -->
    <name>ov_msckf</name>
    <version>1.0.0</version>
    <description>Implementation of the MSCKF.</description>

    <!-- Code Authors -->
    <author email="pgeneva@udel.edu">Patrick Geneva</author>
    <author email="keck@udel.edu">Kevin Eckenhoff</author>
    <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
    <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>signal_logger_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>ov_core</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>signal_logger_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>ov_core</exec_depend>
    <exec_depend>ov_eval</exec_depend>

    <depend>eigen</depend>
    <depend>boost</depend>
    <depend>image_transport</depend>
    <depend>libopencv-dev</depend>
    <depend>param_io</depend>
    <depend>std_srvs</depend>

<!--     <test_depend>cmake_code_coverage</test_depend> -->
    <test_depend>gtest</test_depend>

</package>